# CommentAnalysis

./: .gitignore  .gitmodules  README.md  analysis.ipynb  download.py  download2.py  repo_info_analysis.py  repo_info_download.py  visualization.ipynb
ESEC:FSE19-SRC/: .gitignore  README.md  contributor_info_download.py  download.py  repo_info_analysis.py  repo_info_download.py  visualization.ipynb
ESEC:FSE19-SRC/JavaAnalysis/: .gitignore  .project  run.sh
ESEC:FSE19-SRC/paper/: references.bib
ESEC:FSE19-SRC/result/: README.md  repo_info_selected.csv
JavaAnalysis/: README.md  pom.xml
Working/: .gitignore  AddInformationFromGitHub.py  Analysis.ipynb  BuildFunctionCSV.py  BuildProjectCSV.py  CleanData.py  CodeAnalysis.py  CodeParser.py  CommentCodeAnalysis.ipynb  CountLineOfCode.py  DownloadProjectMetadata.py  DownloadProjects.py  ExtractCodeCommentPairs.py  ExtractComment.py  ExtractCommentFeature.py  FetchProjectInfo.js  FilterProjects.py  GenerateGHTorrentDB.py  IDEA.md  ProjCSVAnalysis.ipynb  README.md  RetrieveProjectList.py  SampleProjects.py  Server.py  Utils.py  VisProject.ipynb  VocabularyAnalysis.ipynb  package.json  requirements.txt
Working/JavaAnalysis/: README.md  pom.xml  run.sh
Working/Parser/: CMakeLists.txt  README.md
Working/Parser/src/: Parser.cpp
Working/Parser/test/: sample.java  sample.py
Working/WoC/: .gitignore  BuildProjectCSV.py  DownloadProjectMetadata.py  FilterProjects.py  GenerateGHTorrentDB.py  README.md  Server.py  (+2 more)
paper/: paper.tex
result/: README.md  repo_info_selected.csv  repo_info_selected_edited.csv  repolist.json
(+17 files in other folders)
